<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/iniziale"
        android:layout_width="201dp"
        android:layout_height="108dp"
        android:id="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center" />

    <Button
        android:text="@string/quiz1b"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:id="@+id/quiz1"
        android:layout_weight="0.13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="166dp" />

    <Button
        android:text="@string/quiz2b"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/quiz1"
        android:layout_toRightOf="@+id/quiz1"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/quiz2" />
</RelativeLayout>